# rust-ray

./: .gitignore  Cargo.toml  README.md
leonardo-engine/: Cargo.toml
leonardo-engine/src/: lib.rs
leonardo-engine/src/algebra/: mod.rs  utility.rs  vec3.rs
leonardo-engine/src/graphics/: camera.rs  hit.rs  material.rs  mod.rs  ppm.rs  ray.rs  sphere.rs
src/: camera.rs  canvas.rs  color.rs  environment.rs  hit.rs  main.rs  matrix.rs  ppm.rs  ray.rs  sphere.rs  transformations.rs  tuple.rs  vec3.rs
