[package]
name = "rust-ray"
version = "0.1.0"
authors = ["Paolo Broglio <53121467+paolobroglio@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
leonardo-engine = { path="leonardo-engine", version="0.1.0" }
indicatif = "0.15.0"